Convert line chart and fix SLA dashboard spacing

--- a/src/styles/components/LineGraph.scss
+++ b/src/styles/components/LineGraph.scss
@@ -5,3 +5,7 @@
 .semiotic-axis path {
   opacity: 0.25;
 }
+
+.semiotic-yHoverLine {
+  stroke-width: 3px;
+}
